Changes
=======

Silva 2.3.2dev-bethel.3 (2011-08-17)
------------------------------------

- improved support for localsites; now available for any container


Silva 2.3.2dev-bethel.2 (2011-08-10)
------------------------------------

- support HTTP HEAD requests to feed views (atom, rss)

- fix creating sticky content service from sticky content service tab

- merge of Products.Silva default branch (cid: a3b80422fc71)

Silva 2.3.2dev-bethel.1 (2011-07-13)
------------------------------------

- was a merge of Products.Silva, but the merge was never pushed out and was lost
  (sigh)
  
- includes a fix to prevent the form from being pickled in the cache
  (which broke when memcache was used)

Silva 2.3.2 (unreleased)
------------------------

- Fix an Acquisition issue while looking for users in service Members.

- Fix image display in XSLT renderer to high resolution.

- Improve SMI template.


Silva 2.3.1-bethel.2 (2011-07-26)
--------------------------------

- added back silva-extra:hide_from_sitemap metadata field

Silva 2.3.1-bethel.1 (2011-06-07)
--------------------------------

- First tagged release of Bethel's Products.Silva 2.3

Silva 2.3.1 (2010-02-08)
------------------------

- Review content priority in the addable list.

- Add support to automatically compute file extension like for images
  to files, by adding the correct file extension to the file
  identifier.

- Add support for file encoding (gzip, bzip2) to files (this is not
  charset !).

- Improve Kupu Silva tools (Link and specially Image tool). Don't show
  the update button if you can't update / nothing changed in the Image
  tool.

- Use the new member service API MemberLookupError to report error in
  the UI while searching for users.

- Add a compatibility fix for Zope 2.12 and old stored template in the
  ZODB.

- Fix installation of the legacy layout.

- A reference box have been added in the publish tab to show which
  content use the current content.
