@@ -3,3 +3,5 @@
 ~
 #
 .egg-info
+build
+dist
